# pptx-formatter

./: .gitignore  README.md  pyproject.toml
pptx_formatter/: __init__.py  main.py
